feat: add orders and favorite bouquet filtering
